refactoring that takes into account new names;
